<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    tools:context=".town.WeponShopActivity">

    <TextView
        android:id="@+id/projectileTXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00_place_holder"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/projectileTXTdiscription"
        app:layout_constraintStart_toStartOf="@+id/projectileTXTdiscription"
        app:layout_constraintTop_toBottomOf="@+id/projectileTXTdiscription" />

    <TextView
        android:id="@+id/RateOfFireTXTDiscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bordered_background__gun_propertys"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/rate_of_fire_title"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/DamageTXTDiscription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.766"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gunShortDiscTXT"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/RateOfFireTXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00_place_holder"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/RateOfFireTXTDiscription"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="@+id/RateOfFireTXTDiscription"
        app:layout_constraintTop_toBottomOf="@+id/RateOfFireTXTDiscription" />

    <TextView
        android:id="@+id/gunShortDiscTXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/description_placeholder"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GunNameTXT" />

    <TextView
        android:id="@+id/DamageTXTDiscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:background="@drawable/bordered_background__gun_propertys"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/damage_title"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.198"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GunNameTXT" />

    <TextView
        android:id="@+id/damageTXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00_place_holder"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/DamageTXTDiscription"
        app:layout_constraintStart_toStartOf="@+id/DamageTXTDiscription"
        app:layout_constraintTop_toBottomOf="@+id/DamageTXTDiscription" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/BasicGunIMG"
                    android:layout_width="wrap_content"
                    android:layout_height="140dp"
                    android:contentDescription="@string/basic_gun_img_content_discription"
                    android:onClick="gunPressed"
                    app:srcCompat="@drawable/simple_pistol" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/AssaltRifleIMG"
                    android:layout_width="210dp"
                    android:layout_height="140dp"
                    android:contentDescription="@string/assault_rifle_img_contect_discription"
                    android:onClick="gunPressed"
                    app:srcCompat="@drawable/assalt_rifle_locked" />

                <TextView
                    android:id="@+id/assualtRifleBuyAmountTXT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:textAlignment="center"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="86dp"
                    android:layout_marginTop="23dp"
                    android:text="@string/_00_place_holder"
                    android:textColor="@color/gold"
                    android:textSize="30sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ShotGunIMG"
                    android:layout_width="210dp"
                    android:layout_height="140dp"
                    android:contentDescription="@string/shot_gun_img_content_discription"
                    android:onClick="gunPressed"
                    app:srcCompat="@drawable/shot_gun_locked" />

                <TextView
                    android:id="@+id/ShotGunBuyAmountTXT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:textAlignment="center"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="86dp"
                    android:layout_marginTop="23dp"
                    android:text="@string/_00_place_holder"
                    android:textColor="@color/gold"
                    android:textSize="30sp" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/RayGunIMG"
                    android:layout_width="210dp"
                    android:layout_height="140dp"
                    android:contentDescription="@string/ray_gun_img_content_discription"
                    android:onClick="gunPressed"
                    app:srcCompat="@drawable/ray_gun_locked" />

                <TextView
                    android:id="@+id/RayGunBuyAmountTXT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:textAlignment="center"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="86dp"
                    android:layout_marginTop="23dp"
                    android:text="@string/_00_place_holder"
                    android:textColor="@color/gold"
                    android:textSize="30sp" />

            </RelativeLayout>


        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/GunNameTXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="casual"
        android:gravity="center_horizontal"
        android:text="@string/gun_name_placeholder"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

    <TextView
        android:id="@+id/projectileTXTdiscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bordered_background__gun_propertys"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/projectiles_title"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/RateOfFireTXTDiscription"
        app:layout_constraintStart_toEndOf="@+id/DamageTXTDiscription"
        app:layout_constraintTop_toTopOf="@+id/DamageTXTDiscription" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="126dp"
        android:layout_height="26dp"
        android:contentDescription="@string/gold_coin_view_img_content_discription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ui_gold" />

    <TextView
        android:id="@+id/UserGoldTXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="4dp"
        android:text="@string/_00_place_holder"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/imageView11"
        app:layout_constraintEnd_toEndOf="@+id/imageView11"
        app:layout_constraintStart_toStartOf="@+id/imageView11"
        app:layout_constraintTop_toTopOf="@+id/imageView11"
        app:layout_constraintVertical_bias="0.615" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="124dp"
        android:layout_height="26dp"
        android:contentDescription="@string/cash_view_img_content_discription"
        app:layout_constraintBottom_toBottomOf="@+id/imageView11"
        app:layout_constraintStart_toEndOf="@+id/imageView11"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ui_money" />

    <TextView
        android:id="@+id/UserMoneyTXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="4dp"
        android:text="@string/_00_place_holder"
        android:textColor="#FFFAFA"
        app:layout_constraintBottom_toBottomOf="@+id/imageView12"
        app:layout_constraintEnd_toEndOf="@+id/imageView12"
        app:layout_constraintStart_toEndOf="@+id/imageView11"
        app:layout_constraintTop_toTopOf="@+id/imageView12"
        app:layout_constraintVertical_bias="0.61" />

    <Button
        android:id="@+id/BuyUpgradeBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="BuyUpgradeBTNPressed"
        android:text="@string/buy_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
        app:layout_constraintVertical_bias="0.592" />


</androidx.constraintlayout.widget.ConstraintLayout>